--- a/bitcoin_pages/templates/bitcoin_pages/about-us.html
+++ b/bitcoin_pages/templates/bitcoin_pages/about-us.html
@@ -1,4 +1,7 @@
 {% extends 'base_layout.html' %}
+{% block nav-about %}
+active
+{% endblock %}
 {% load static %}
 {% block title %}About Us{% endblock %}
 {% block content %}
@@ -246,18 +249,12 @@
 						<div class="single-team">
 							<div class="single-team-img">
 								<img class="img-fluid" src="{% static 'assets/img/team/1.png' %}" alt="">
-								<div class="single-team-social">
-									<ul>
-									   <li><a class="sicon1" href="#"><i class="icofont icofont-social-facebook"></i></a></li>
-									   <li><a class="sicon2" href="#"><i class="icofont icofont-social-twitter"></i></a></li>
-									   <li><a class="sicon3" href="#"><i class="icofont icofont-social-youtube-play"></i></a></li>
-									</ul>
-								</div>
+								
 							</div>
 							<div class="single-team-meta">
-								<h4>Jone Doe</h4>
+								<h4>Samson chowvosky</h4>
 								<span>Hash Theme, CEO</span>
-								<p>Lorem ipsum dolor sit amet consectetur ullamco adipiscing elit, sed do eiusmod tempor exercitat incididunt ut labore.</p>
+								
 							</div>	
 						</div>							
 					</div>
@@ -266,18 +263,12 @@
 						<div class="single-team">
 							<div class="single-team-img">
 								<img class="img-fluid" src="{% static 'assets/img/team/2.png' %}" alt="">
-								<div class="single-team-social">
-									<ul>
-									   <li><a class="sicon1" href="#"><i class="icofont icofont-social-facebook"></i></a></li>
-									   <li><a class="sicon2" href="#"><i class="icofont icofont-social-twitter"></i></a></li>
-									   <li><a class="sicon3" href="#"><i class="icofont icofont-social-youtube-play"></i></a></li>
-									</ul>
-								</div>
+								
 							</div>
 							<div class="single-team-meta">
 								<h4>Mark Henry</h4>
 								<span>Hash Theme, CEO</span>
-								<p>Lorem ipsum dolor sit amet consectetur ullamco adipiscing elit, sed do eiusmod tempor exercitat incididunt ut labore.</p>
+								
 							</div>	
 						</div>							
 					</div>
@@ -286,18 +277,12 @@
 						<div class="single-team">
 							<div class="single-team-img">
 								<img class="img-fluid" src="{% static 'assets/img/team/3.png' %}" alt="">
-								<div class="single-team-social">
-									<ul>
-									   <li><a class="sicon1" href="#"><i class="icofont icofont-social-facebook"></i></a></li>
-									   <li><a class="sicon2" href="#"><i class="icofont icofont-social-twitter"></i></a></li>
-									   <li><a class="sicon3" href="#"><i class="icofont icofont-social-youtube-play"></i></a></li>
-									</ul>
-								</div>
+								
 							</div>
 							<div class="single-team-meta">
 								<h4>Bishen Ketty</h4>
 								<span>Hash Theme, CEO</span>
-								<p>Lorem ipsum dolor sit amet consectetur ullamco adipiscing elit, sed do eiusmod tempor exercitat incididunt ut labore.</p>
+								
 							</div>	
 						</div>							
 					</div>
@@ -306,18 +291,12 @@
 						<div class="single-team">
 							<div class="single-team-img">
 								<img class="img-fluid" src="{% static 'assets/img/team/4.png' %}" alt="">
-								<div class="single-team-social">
-									<ul>
-									   <li><a class="sicon1" href="#"><i class="icofont icofont-social-facebook"></i></a></li>
-									   <li><a class="sicon2" href="#"><i class="icofont icofont-social-twitter"></i></a></li>
-									   <li><a class="sicon3" href="#"><i class="icofont icofont-social-youtube-play"></i></a></li>
-									</ul>
-								</div>
+								
 							</div>
 							<div class="single-team-meta">
 								<h4>Kwasan Rowy</h4>
 								<span>Hash Theme, CEO</span>
-								<p>Lorem ipsum dolor sit amet consectetur ullamco adipiscing elit, sed do eiusmod tempor exercitat incididunt ut labore.</p>
+								
 							</div>	
 						</div>							
 					</div>
@@ -326,18 +305,12 @@
 						<div class="single-team">
 							<div class="single-team-img">
 								<img class="img-fluid" src="{% static 'assets/img/team/5.png' %}" alt="">
-								<div class="single-team-social">
-									<ul>
-									   <li><a class="sicon1" href="#"><i class="icofont icofont-social-facebook"></i></a></li>
-									   <li><a class="sicon2" href="#"><i class="icofont icofont-social-twitter"></i></a></li>
-									   <li><a class="sicon3" href="#"><i class="icofont icofont-social-youtube-play"></i></a></li>
-									</ul>
-								</div>
+								
 							</div>
 							<div class="single-team-meta">
-								<h4>Jone Doe</h4>
+								<h4>Anthony weilman</h4>
 								<span>Hash Theme, CEO</span>
-								<p>Lorem ipsum dolor sit amet consectetur ullamco adipiscing elit, sed do eiusmod tempor exercitat incididunt ut labore.</p>
+								
 							</div>	
 						</div>							
 					</div>
