--- a/bitcoin_pages/templates/bitcoin_pages/services.html
+++ b/bitcoin_pages/templates/bitcoin_pages/services.html
@@ -1,4 +1,7 @@
 {% extends 'base_layout.html' %}
+{% block nav-service %}
+active
+{% endblock %}
 {% load static %}
 {% block title %}Bitcoin - Services{% endblock %}
 {% block content %}
@@ -190,12 +193,12 @@
 				<div class="col-lg-8 col-md-8 col-sm-12 col-12 mb-lg-0 mb-md-4 mb-sm-4 mb-4">
 					<div class="calltoaction-two-wrap">
 						<h4>Need More Service?</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do<br>incididunt ut labore et dolore magna aliqua.</p>
+						<p>If you have questions, comments or concerns, our local staff is on-hand to answer all your needs.<br>Contact us by email</p>
 					</div>
 				</div>
 				<!-- end col -->
 				<div class="col-lg-4 col-md-4 col-sm-12 col-12 mt-lg-4 mt-md-4 text-lg-right text-md-right text-sm-left text-left">
-					<a href="#" class="btn-style btn-border btn-border-3">Contact Us</a>
+					<a href="{% url 'contact' %}" class="btn-style btn-border btn-border-3">Contact Us</a>
 				</div>
 				<!-- end col -->
 			</div>
