--- a/transactions/templates/transactions/bank_details.html
+++ b/transactions/templates/transactions/bank_details.html
@@ -46,6 +46,15 @@
             <!-- /.col -->
           </div>
           <!-- /.row -->
+          <div class="row">
+            <div class="col">
+              <h3>Routing Number:</h3>
+            </div>
+            <div class="col-8 align-left">
+              <h3>{{ details.routing_number }}</h3>
+            </div>
+            <!-- /.col -->
+          </div>
 
         </div>
         <!-- /.box-body -->
