--- a/bitcoin_pages/templates/bitcoin_pages/contact-us.html
+++ b/bitcoin_pages/templates/bitcoin_pages/contact-us.html
@@ -1,4 +1,7 @@
 {% extends 'base_layout.html' %}
+{% block nav-contact %}
+active
+{% endblock %}
 {% load static %}
 {% block title %}Contact Us{% endblock %}
 {% block content %}
