--- a/bitcoin_pages/templates/bitcoin_pages/faq.html
+++ b/bitcoin_pages/templates/bitcoin_pages/faq.html
@@ -11,7 +11,7 @@
                 <div class="col-12 text-center">
                     <div class="single-page-title">
                         <h2>Freequently Asked Question</h2>
-                        <p>Lorem ipsum dolor sit amet</p>
+                        <p>Need our support</p>
                     </div>
                 </div>
             </div>
@@ -23,7 +23,7 @@
             <div class="row">
                 <div class="col-12 text-center">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="#">Home</a></li>
+                        <li class="breadcrumb-item"><a href="{% url 'index' %}">Home</a></li>
                         <li class="breadcrumb-item active">FAQ</li>
                     </ol>
                 </div>
@@ -40,7 +40,7 @@
         <div class="row mb-5">
             <div class="col-lg-6 col-md-6 col-sm-12 col-12 pr-lg-5 pr-md-5 pr-sm-0 pr-0 mb-lg-0 mb-md-0 mb-sm-5 mb-5 faq-page-into">
                 <h6>Sed ut perspiciatis unde omnis</h6>
-                <h3>Bitcoin Qualirty<span> Support</span></h3>
+                <h3>Fonixcoin Quality<span> Support</span></h3>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
                 <ul>
                     <li><i class="icofont icofont-ui-press"></i> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</li>
