--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -152,8 +152,8 @@
 						<div class="col-lg-9 d-none d-lg-block d-md-none">
 							<nav class="navbar navbar-expand-lg justify-content-left">
 								<ul class="navbar-nav">
-									<li><a href="{% url 'index' %}" class="active nav-link">Home</a></li>
-									<li class="dropdown"><a href="{% url 'services' %}" class="nav-link">Services</a>
+									<li><a href="{% url 'index' %}" class="{% block nav-home %}{% endblock %} nav-link">Home</a></li>
+									<li class="dropdown"><a href="{% url 'services' %}" class="{% block nav-service %}{% endblock %} nav-link">Services</a>
 										<ul class="dropdown-menu">
 											<li><a href="{% url 'services' %}">All Our Services</a></li>
 											<li><a href="{% url 'bitcoin_trading' %}">Bitcoin Trading</a></li>
@@ -162,10 +162,10 @@
 											<li><a href="{% url 'crypto_trading' %}">Cryptocurrency</a></li>
 										</ul>
 									</li>
-									<li><a href="blog.html" class="nav-link">Blog</a>
+									<li><a href="" class="nav-link">Blog</a>
 									</li>
-									<li><a href="{% url 'about-us' %}" class="nav-link">About Us</a></li>
-									<li><a href="{% url 'contact' %}" class="nav-link">Contact</a></li>
+									<li><a href="{% url 'about-us' %}" class="{% block nav-about %}{% endblock %} nav-link">About Us</a></li>
+									<li><a href="{% url 'contact' %}" class="{% block nav-contact %}{% endblock %} nav-link">Contact</a></li>
 								</ul>
 							</nav>
 						</div>
@@ -230,11 +230,10 @@
 						<div class="col-12 footer-widget-inner">
 							<ul class="quick-link-list">
 								<li><a href="{% url 'index' %}"><i class="fa fa-chevron-circle-right"></i> Home Page</a></li>
-								<li><a href="#"><i class="fa fa-chevron-circle-right"></i> Our Members</a></li>
-								<li><a href="#"><i class="fa fa-chevron-circle-right"></i> Client feedback</a></li>
-								<li><a href="#"><i class="fa fa-chevron-circle-right"></i> Buy & Sell</a></li>
-								<li><a href="#"><i class="fa fa-chevron-circle-right"></i> Bitcoin Trade</a></li>
-								<li><a href="{% url 'faq' %}"><i class="fa fa-chevron-circle-right"></i> Faq </a></li>
+								<li><a href="{% url 'about-us' %}"><i class="fa fa-chevron-circle-right"></i> Our Members</a></li>
+								<li><a href="{% url 'coin_buy' %}"><i class="fa fa-chevron-circle-right"></i> Buy & Sell</a></li>
+								<li><a href="{% url 'crypto_trading' %}"><i class="fa fa-chevron-circle-right"></i> Bitcoin Trade</a></li>
+								
 							</ul>
 						</div>	
                     </div>
@@ -248,23 +247,23 @@
 							<div class="singleRecpost">
 								<img src="{% static 'assets/img/blog/1.jpg' %}" alt="" class="img-fluid">
 								<h6 class="recTitle">
-									<a href="#">Lorem ipsum dolor sit amet, consectetuer.</a>
+									<a href="#">Fonixcoin Introduces No-Fee USD Deposits with Signature and MVB Bank</a>
 								</h6>
-								<p class="posted-on">3 DEC 2018</p>
+								<p class="posted-on">3 SEP 2020</p>
 							</div>
 							<div class="singleRecpost">
 								<img src="{% static 'assets/img/blog/2.jpg' %}" alt="" class="img-fluid">
 								<h6 class="recTitle">
-									<a href="#">Lorem ipsum dolor sit amet, consectetuer.</a>
+									<a href="#">Fonixcoin Releases July 2020 Bitcoin Volatility Report</a>
 								</h6>
-								<p class="posted-on">4 DEC 2018</p>
+								<p class="posted-on">18 JUL 2020</p>
 							</div>
 							<div class="singleRecpost">
 								<img src="{% static 'assets/img/blog/3.jpg' %}" alt="" class="img-fluid">
 								<h6 class="recTitle">
-									<a href="#">Lorem ipsum dolor sit amet, consectetuer.</a>
+									<a href="#">FonixCoin Custody is Officially Open For Business.</a>
 								</h6>
-								<p class="posted-on">5 DEC 2018</p>
+								<p class="posted-on">19 DEC 2019</p>
 							</div>
 						</div>
                     </div>
@@ -307,9 +306,7 @@
 							<div class="footer-social">
 								<ul>
 									<li><a href="#"><i class="icofont icofont-social-facebook"></i></a></li>
-									<li><a href="#"><i class="icofont icofont-social-twitter"></i></a></li>
-									<li><a href="#"><i class="icofont icofont-social-youtube"></i></a></li>
-									<li><a href="#"><i class="icofont icofont-social-google-plus"></i></a></li>
+									<li><a href="#"><i class="icofont icofont-social-instagram"></i></a></li>
 								</ul>
 							</div>
 						</div>
@@ -320,7 +317,7 @@
         </div>
 		
         <!--Footer Bottom -->
-        <div class="copyright">
+        <!-- <div class="copyright">
             <div class="auto-container">
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-12 col-12 mb-lg-0 mb-md-0 mb-4 footer-menu text-center text-lg-left text-md-left">
@@ -330,12 +327,9 @@
                             <li><a href="{% url 'refund_policy' %}">Refund Policy</a> </li>
                         </ul>
                     </div>
-                    <div class="col-lg-6 col-md-6 col-sm-12 col-12 copyright-text text-center text-lg-right text-md-right">
-                        <p><a href="" target="_blank">Check Hub</a></p>
-                    </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 		
     </footer>
     <!-- END FOOTER -->
