--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/img/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/img/favicon.ico' %}" />
     <title>FonixCoin - Bitcoin And Crypto Currency Trading</title>
     <!-- Bootstrap core CSS -->
     <link href="{% static 'assets/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -114,7 +114,7 @@
 					<div class="col-lg-5 col-md-3 col-sm-6 col-7 mx-auto pl-0 mb-lg-0 mb-5">
 						<div class="logo">
 							<a href="{% url 'index' %}">
-							   <!-- <img class="img-fluid" src="{% static 'assets/img/logo.png' %}" alt=""> -->
+							   <img class="img-fluid" src="{% static 'assets/img/logo.png' %}" alt="">
 							</a>
 						</div>
 					</div>
