added phone number

--- a/bitcoin_pages/templates/bitcoin_pages/contact-us.html
+++ b/bitcoin_pages/templates/bitcoin_pages/contact-us.html
@@ -73,8 +73,8 @@ active
 						</div>
 						<div class="single-address-dec">
 							<h4>Give a call</h4>
-							<p>Phone: 123-456-0975</p>
-							<p>Phone: 123-456-0975</p>
+							<p>Phone: +1-470-673-1900</p>
+							<p>Phone: </p>
 						</div>
 						<div class="single-address-link">
 							<a href="#">quick call</a>
