--- a/bitcoin_pages/templates/bitcoin_pages/contact-us.html
+++ b/bitcoin_pages/templates/bitcoin_pages/contact-us.html
@@ -104,8 +104,8 @@ active
 						</div>
 						<div class="single-address-dec">
 							<h4>Lets's have a chat</h4>
-							<p>Telephone: 123-456-0975</p>
-							<p>Fax: 321-654-0975</p>
+							<p>Telephone: +1-470-673-1900</p>
+	
 						</div>
 						<div class="single-address-link">
 							<a href="#">click here</a>
