--- a/bitcoin_pages/templates/bitcoin_pages/about-us.html
+++ b/bitcoin_pages/templates/bitcoin_pages/about-us.html
@@ -248,12 +248,12 @@ active
 					<div class="single-team-wrapper">
 						<div class="single-team">
 							<div class="single-team-img">
-								<img class="img-fluid" src="{% static 'assets/img/team/1.png' %}" alt="">
+								<img class="img-fluid" src="{% static 'assets/img/team/work1.jpg' %}" alt="">
 								
 							</div>
 							<div class="single-team-meta">
-								<h4>Samson chowvosky</h4>
-								<span>Hash Theme, CEO</span>
+								<h4>Alissa Alexandra</h4>
+								<span>Fonixcoin, Consultant</span>
 								
 							</div>	
 						</div>							
@@ -266,8 +266,8 @@ active
 								
 							</div>
 							<div class="single-team-meta">
-								<h4>Mark Henry</h4>
-								<span>Hash Theme, CEO</span>
+								<h4>Mark Evelyn</h4>
+								<span>Consultant</span>
 								
 							</div>	
 						</div>							
@@ -276,12 +276,12 @@ active
 					<div class="single-team-wrapper">
 						<div class="single-team">
 							<div class="single-team-img">
-								<img class="img-fluid" src="{% static 'assets/img/team/3.png' %}" alt="">
+								<img class="img-fluid" src="{% static 'assets/img/team/work2.jpg' %}" alt="">
 								
 							</div>
 							<div class="single-team-meta">
-								<h4>Bishen Ketty</h4>
-								<span>Hash Theme, CEO</span>
+								<h4>Maeve Owen</h4>
+								<span>Fonixcoin, Broker</span>
 								
 							</div>	
 						</div>							
@@ -290,12 +290,12 @@ active
 					<div class="single-team-wrapper">
 						<div class="single-team">
 							<div class="single-team-img">
-								<img class="img-fluid" src="{% static 'assets/img/team/4.png' %}" alt="">
+								<img class="img-fluid" src="{% static 'assets/img/team/work3.jpg' %}" alt="">
 								
 							</div>
 							<div class="single-team-meta">
-								<h4>Kwasan Rowy</h4>
-								<span>Hash Theme, CEO</span>
+								<h4>Garry Ethan</h4>
+								<span>Fonixcoin, Broker</span>
 								
 							</div>	
 						</div>							
@@ -304,12 +304,12 @@ active
 					<div class="single-team-wrapper">
 						<div class="single-team">
 							<div class="single-team-img">
-								<img class="img-fluid" src="{% static 'assets/img/team/5.png' %}" alt="">
+								<img class="img-fluid" src="{% static 'assets/img/team/work4.jpg' %}" alt="">
 								
 							</div>
 							<div class="single-team-meta">
-								<h4>Anthony weilman</h4>
-								<span>Hash Theme, CEO</span>
+								<h4>Parbez Lahan Kabeer</h4>
+								<span>Cryptocurrency expert</span>
 								
 							</div>	
 						</div>							
