--- a/bitcoin_pages/templates/bitcoin_pages/index.html
+++ b/bitcoin_pages/templates/bitcoin_pages/index.html
@@ -545,7 +545,8 @@ active
 						}
 							</script>
 						</div>
-  <!-- TradingView Widget END -->
+						  <!-- TradingView Widget END -->
+						  
 					</div>
 				</div>
 				<!-- end col -->
@@ -663,6 +664,30 @@ active
 								</div>
 								<div class="single-testimonial-meta">
 									<p>- Aleixy shalom</p>
+								</div>
+							</div>
+							<!-- end single testimonial -->
+							<div class="single-testimonial">
+								<div class="single-testimonial-image">
+									<img class="img-fluid rounded-circle" src="{% static 'assets/img/clients/test.png' %}" alt="">
+								</div>
+								<div class="single-testimonial-content">
+									<p>FonixCoin has made cryptocurrency trading so easy that i rarely have to do anything complex, i just watch and see my asset grow. Quite remarkable i must say.</p>
+								</div>
+								<div class="single-testimonial-meta">
+									<p>- Brandon Eduardo</p>
+								</div>
+							</div>
+							<!-- end single testimonial -->
+							<div class="single-testimonial">
+								<div class="single-testimonial-image">
+									<img class="img-fluid rounded-circle" src="{% static 'assets/img/clients/test2.png' %}" alt="">
+								</div>
+								<div class="single-testimonial-content">
+									<p>Doing business on this platform has been a turning point for my life and my career in general. This is quite amazing.</p>
+								</div>
+								<div class="single-testimonial-meta">
+									<p>- Emmilly Hanson</p>
 								</div>
 							</div>
 							<!-- end single testimonial -->
