--- a/dashboard/templates/base_dash.html
+++ b/dashboard/templates/base_dash.html
@@ -33,41 +33,45 @@
 
 <body class="hold-transition skin-yellow sidebar-mini">
 <div class="wrapper">
-  			<!-- TradingView Widget BEGIN -->
+  <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
-	<div class="tradingview-widget-container__widget"></div>
-	<script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
-	{
-	"symbols": [
-	  {
-		"proName": "FOREXCOM:SPXUSD",
-		"title": "S&P 500"
-	  },
-	  {
-		"proName": "FOREXCOM:NSXUSD",
-		"title": "Nasdaq 100"
-	  },
-	  {
-		"proName": "FX_IDC:EURUSD",
-		"title": "EUR/USD"
-	  },
-	  {
-		"proName": "BITSTAMP:BTCUSD",
-		"title": "BTC/USD"
-	  },
-	  {
-		"proName": "BITSTAMP:ETHUSD",
-		"title": "ETH/USD"
-	  }
-	],
-	"colorTheme": "dark",
-	"isTransparent": false,
-	"displayMode": "adaptive",
-	"locale": "en"
-  }
-	</script>
-  </div>
-  <!-- TradingView Widget END -->
+  <div class="tradingview-widget-container__widget"></div>
+  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
+  {
+  "symbols": [
+    {
+      "proName": "BITSTAMP:BTCUSD",
+      "title": "BTC/USD"
+    },
+    {
+      "proName": "BITSTAMP:ETHUSD",
+      "title": "ETH/USD"
+    },
+    {
+      "description": "LTC/USD",
+      "proName": "COINBASE:LTCUSD"
+    },
+    {
+      "description": "XBT/USD",
+      "proName": "BITMEX:XBTUSD"
+    },
+    {
+      "description": "DASH/ETH",
+      "proName": "BINANCE:DASHETH"
+    },
+    {
+      "description": "RIF/BTC",
+      "proName": "KUCOIN:RIFBTC"
+    }
+  ],
+  "colorTheme": "dark",
+  "isTransparent": false,
+  "displayMode": "adaptive",
+  "locale": "en"
+}
+  </script>
+</div>
+<!-- TradingView Widget END -->
 
   <header class="main-header">
     <!-- Logo -->
