--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -37,24 +37,12 @@
 	<header class="main-header header-1">
 		<!-- START TOP AREA -->
 		<div class="top-area">
-			<!-- TradingView Widget BEGIN -->
+  <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
 	<div class="tradingview-widget-container__widget"></div>
 	<script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
 	{
 	"symbols": [
-	  {
-		"proName": "FOREXCOM:SPXUSD",
-		"title": "S&P 500"
-	  },
-	  {
-		"proName": "FOREXCOM:NSXUSD",
-		"title": "Nasdaq 100"
-	  },
-	  {
-		"proName": "FX_IDC:EURUSD",
-		"title": "EUR/USD"
-	  },
 	  {
 		"proName": "BITSTAMP:BTCUSD",
 		"title": "BTC/USD"
@@ -62,6 +50,22 @@
 	  {
 		"proName": "BITSTAMP:ETHUSD",
 		"title": "ETH/USD"
+	  },
+	  {
+		"description": "LTC/USD",
+		"proName": "COINBASE:LTCUSD"
+	  },
+	  {
+		"description": "XBT/USD",
+		"proName": "BITMEX:XBTUSD"
+	  },
+	  {
+		"description": "DASH/ETH",
+		"proName": "BINANCE:DASHETH"
+	  },
+	  {
+		"description": "RIF/BTC",
+		"proName": "KUCOIN:RIFBTC"
 	  }
 	],
 	"colorTheme": "light",
