--- a/users/templates/registration/edit_user.html
+++ b/users/templates/registration/edit_user.html
@@ -29,7 +29,7 @@
         <div class="box-body">
           <div class="row">
             <div class="col">
-            	<form action="" method="POST">
+            	<form action="" method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="form-group">
 						<h5>First Name <span class="text-danger">*</span></h5>
